Implementando roles admin e user

--- a/CJL-BackEnd/CJL/src/main/resources/templates/redefinicao-senha.html
+++ b/CJL-BackEnd/CJL/src/main/resources/templates/redefinicao-senha.html
@@ -54,13 +54,13 @@
 <div class="container">
   <h2>Redefinição de Senha</h2>
 
-  <p>Olá <strong th:text="${usuario.nome}">Fulano</strong>,</p>
+  <p>Olá <strong th:text="${nome}">Fulano</strong>,</p>
 
   <p>Recebemos uma solicitação para redefinir a sua senha.
     Para criar uma nova senha, clique no botão abaixo:</p>
 
   <p>
-    <a th:href="${linkReset}" class="btn">Redefinir Senha</a>
+    <a th:href="${link}" class="btn">Redefinir Senha</a>
   </p>
 
   <p>Se você não fez essa solicitação, pode ignorar este e-mail.
